--- a/frontend/src/assets/style/global.scss
+++ b/frontend/src/assets/style/global.scss
@@ -4,4 +4,17 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+.el-main {
+  flex:1;
+}
+
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
 }
